--- a/resources/language/Japanese/strings.xml
+++ b/resources/language/Japanese/strings.xml
@@ -10,7 +10,7 @@
   <string id="32001">デフォルトトークン名</string>
   <string id="32002">表示する履歴数</string>
   <string id="32003">デバッグ</string>
-  <string id="32100">トークン追加</string>
+  <string id="32100">トークン設定</string>
   <string id="32101">トークン名</string>
   <string id="32102">トークン</string>
   <string id="32103">[COLOR green]トークンを追加する[/COLOR]</string>
