--- a/resources/language/English/strings.xml
+++ b/resources/language/English/strings.xml
@@ -7,18 +7,22 @@
       strings 33000 thru 33999 reserved for common strings used in add-ons
   -->
   <string id="32000">Others</string>
-  <string id="32001">Default Token Name</string>
+  <string id="32001">Default Token</string>
   <string id="32002">History Length</string>
   <string id="32003">Debug</string>
+  <string id="32004">Startup</string>
   <string id="32100">Token Settings</string>
   <string id="32101">Name</string>
   <string id="32102">Token</string>
   <string id="32103">[COLOR green]Add Token[/COLOR]</string>
   <string id="32200">Send Message</string>
-  <string id="32201">Token Name</string>
+  <string id="32201">Token</string>
   <string id="32202">Message</string>
   <string id="32203">[COLOR green]Send[/COLOR]</string>
-  <string id="32900">Addon Settings</string>
+  <string id="32900">Addon settings</string>
   <string id="32901">%m/%d</string>
   <string id="32902">Mon,Tue,Wed,Thu,Fri,Sat,Sun</string>
+  <string id="32903">Token list</string>
+  <string id="32904">History of default token</string>
+  <string id="32905">Delete token</string>
 </strings>
