--- a/resources/language/Japanese/strings.xml
+++ b/resources/language/Japanese/strings.xml
@@ -7,18 +7,22 @@
       strings 33000 thru 33999 reserved for common strings used in add-ons
   -->
   <string id="32000">その他</string>
-  <string id="32001">デフォルトトークン名</string>
+  <string id="32001">デフォルトトークン</string>
   <string id="32002">表示する履歴数</string>
   <string id="32003">デバッグ</string>
+  <string id="32004">起動時の画面</string>
   <string id="32100">トークン設定</string>
   <string id="32101">トークン名</string>
   <string id="32102">トークン</string>
   <string id="32103">[COLOR green]トークンを追加する[/COLOR]</string>
   <string id="32200">メッセージ送信</string>
-  <string id="32201">送信先トークン名</string>
+  <string id="32201">送信先トークン</string>
   <string id="32202">メッセージ</string>
   <string id="32203">[COLOR green]送信[/COLOR]</string>
   <string id="32900">アドオン設定</string>
   <string id="32901">%m月%d日</string>
   <string id="32902">月,火,水,木,金,土,日</string>
+  <string id="32903">トークンリスト</string>
+  <string id="32904">デフォルトークンの送信履歴</string>
+  <string id="32905">トークンを削除する</string>
 </strings>
