add send message

--- a/resources/language/English/strings.xml
+++ b/resources/language/English/strings.xml
@@ -20,5 +20,6 @@
   <string id="32900">Addon settings</string>
   <string id="32901">%m/%d</string>
   <string id="32902">Mon,Tue,Wed,Thu,Fri,Sat,Sun</string>
+  <string id="32904">Send message</string>
   <string id="32905">Delete token</string>
 </strings>
