--- a/resources/language/Japanese/strings.xml
+++ b/resources/language/Japanese/strings.xml
@@ -20,5 +20,6 @@
   <string id="32900">アドオン設定</string>
   <string id="32901">%m月%d日</string>
   <string id="32902">月,火,水,木,金,土,日</string>
+  <string id="32904">メッセージを送信する</string>
   <string id="32905">トークンを削除する</string>
 </strings>
